test/classes/initializers/generics/declarations/no-arg-type2.good
no-arg-type2.chpl:14: error: cannot determine type instantiation based on initializers provided
